<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.dashboard.MainActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="420dp"
        android:layout_height="230dp"
        android:background="@drawable/custom_profile_background"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/content_description_avatar_dico"
            android:src="@drawable/image_account" />

        <TextView
            android:id="@+id/text_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif-medium"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="Muhamad Fadli" />

        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            tools:text="someone@email.com" />


    </RelativeLayout>


    <TextView
        android:id="@+id/label_auth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/const_text_setting"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/container" />



    <RelativeLayout
        android:id="@+id/btn_set_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/custom_profile_button_ripple"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_auth">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/const_text_change_language"
            android:textColor="#5188CE"
            app:drawableStartCompat="@drawable/ic_baseline_translate_24"
            app:drawableTint="#5188CE"
            tools:ignore="RelativeOverlap"
            tools:targetApi="m" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/content_description_btn_app_setting"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            app:tint="#5188CE" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/btn_set_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/custom_profile_button_ripple"
        android:gravity="center_vertical"
        android:padding="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_set_language">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:text="@string/const_text_permission"
            android:textColor="#5188CE"
            app:drawableStartCompat="@drawable/ic_baseline_key_24"
            app:drawableTint="#5188CE"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/content_description_btn_app_setting"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            app:tint="#5188CE" />
    </RelativeLayout>


    <Button
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="120dp"
        android:background="@drawable/custom_logout_button_ripple"
        android:text="@string/button_text_logout"
        android:textAllCaps="false"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_set_permission" />


</androidx.constraintlayout.widget.ConstraintLayout>